# screenoff

./: CMakeLists.txt  LICENSE  README.md  screenoff.cpp
cmake/: Toolchain-x86_64-w64-mingw32.cmake
